--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     kapt "com.android.databinding:compiler:3.1.4"
+
+    //For Time
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
 
     //RXJava Retrofit2 dependencies
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
