--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Insider">
-        <activity android:name=".item_detail_activityForNews_into"></activity>
+        <activity android:name=".DetainActivityNews"></activity>
         <activity android:name=".DetailNews" />
         <activity android:name=".NewsListActivity">
             <intent-filter>
